# base-noprelude

./: .gitignore  Generate.hs  README.md  Setup.hs  base-noprelude.cabal
examples/ex1/: ex1.cabal
examples/ex1/src/: Main.hs  Prelude.hs
examples/extended-prelude/: LICENSE  extended-prelude.cabal
examples/extended-prelude/src/: Prelude.hs
src/: Foreign.hs  Numeric.hs
src/Control/: Applicative.hs  Arrow.hs  Category.hs  Concurrent.hs  Exception.hs  Monad.hs
src/Control/Concurrent/: Chan.hs  MVar.hs  QSem.hs  QSemN.hs
src/Control/Exception/: Base.hs
src/Control/Monad/: Fix.hs  Instances.hs  ST.hs  Zip.hs
src/Control/Monad/ST/: Lazy.hs  Safe.hs  Strict.hs  Unsafe.hs
src/Control/Monad/ST/Lazy/: Safe.hs  Unsafe.hs
src/Data/: Bits.hs  Bool.hs  Char.hs  Coerce.hs  Complex.hs  Data.hs  Dynamic.hs  Either.hs  Eq.hs  Fixed.hs  Foldable.hs  Function.hs  Functor.hs  IORef.hs  Int.hs  Ix.hs  List.hs  Maybe.hs  Monoid.hs  OldTypeable.hs  Ord.hs  Proxy.hs  Ratio.hs  STRef.hs  String.hs  Traversable.hs  Tuple.hs  Typeable.hs  Unique.hs  Version.hs  Word.hs
src/Data/OldTypeable/: Internal.hs
src/Data/STRef/: Lazy.hs  Strict.hs
src/Data/Type/: Bool.hs  Coercion.hs  Equality.hs
src/Data/Typeable/: Internal.hs
src/Debug/: Trace.hs
src/Foreign/: C.hs  Concurrent.hs  ForeignPtr.hs  Marshal.hs  Ptr.hs  Safe.hs  StablePtr.hs  Storable.hs
src/Foreign/C/: Error.hs  String.hs  Types.hs
src/Foreign/ForeignPtr/: Safe.hs  Unsafe.hs
src/Foreign/Marshal/: Alloc.hs  Array.hs  Error.hs  Pool.hs  Safe.hs  Unsafe.hs  Utils.hs
src/GHC/: Arr.hs  Base.hs  Char.hs  Conc.hs  ConsoleHandler.hs  Constants.hs  Desugar.hs  Enum.hs  Environment.hs  Err.hs  Event.hs  Exception.hs  Exts.hs  Fingerprint.hs  Float.hs  Foreign.hs  ForeignPtr.hs  GHCi.hs  Generics.hs  IO.hs  IOArray.hs  IORef.hs  IP.hs  Int.hs  List.hs  MVar.hs  Num.hs  PArr.hs  Pack.hs  Profiling.hs  Ptr.hs  Read.hs  Real.hs  ST.hs  STRef.hs  Show.hs  Stable.hs  Stack.hs  Stats.hs  Storable.hs  (+6 more)
src/GHC/Conc/: IO.hs  Signal.hs  Sync.hs  Windows.hs
src/GHC/Fingerprint/: Type.hs
src/GHC/Float/: ConversionUtils.hs  RealFracMethods.hs
src/GHC/IO/: Buffer.hs  BufferedIO.hs  Device.hs  Encoding.hs  Exception.hs  FD.hs  Handle.hs  IOMode.hs
src/GHC/IO/Encoding/: CodePage.hs  Failure.hs  Iconv.hs  Latin1.hs  Types.hs  UTF16.hs  UTF32.hs  UTF8.hs
src/GHC/IO/Encoding/CodePage/: API.hs  Table.hs
src/GHC/IO/Handle/: FD.hs  Internals.hs  Text.hs  Types.hs
src/System/: CPUTime.hs  Environment.hs  Exit.hs  IO.hs  Info.hs  Mem.hs  Timeout.hs
src/System/Console/: GetOpt.hs
src/System/IO/: Error.hs  Unsafe.hs
src/System/Mem/: StableName.hs  Weak.hs
src/System/Posix/: Internals.hs  Types.hs
src/Text/: Printf.hs  Read.hs  Show.hs
src/Text/ParserCombinators/: ReadP.hs  ReadPrec.hs
src/Text/Read/: Lex.hs
src/Text/Show/: Functions.hs
src/Unsafe/: Coerce.hs
