name:                base-noprelude
version:             4.7.0.2
synopsis:            "base" package sans "Prelude" module
homepage:            https://github.com/hvr/base-noprelude
bug-reports:         https://github.com/hvr/base-noprelude/issues
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development
build-type:          Custom
cabal-version:       >=1.10
description:
    This package simplifies defining custom "Prelude"s without having
    to use @-XNoImplicitPrelude@ by re-exporting the full
    module-hierarchy of the
    <http://hackage.haskell.org/package/base-4.7.0.2 base-4.7.0.2>
    package /except/ for the "Prelude" module.
    .
    Each version of @base-noprelude@ depends on a specific
    @base@-version and thus mirrors @base@'s
    versioning (with the exception that @base-noprelude@ needs to add an
    /additional/ 5th version component in case of bug-fix releases).
    .
    See <https://github.com/hvr/base-noprelude> for more information.

library
    build-depends:       base ==4.7.0.2
    default-language:    Haskell2010
    default-extensions:  PackageImports
    exposed:             False