-- example for base-noprelude
name:                ex1
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ex1
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base-noprelude
  default-language:    Haskell2010

  -- provide local "Prelude" module since `base-noprelude` doesn't...
  other-modules: Prelude
