name:                extended-prelude
version:             0.1.0.0
synopsis:            Extended Prelude example for `base-noprelude`
homepage:            https://github.com/silkapp/base-extended
license:             BSD3
license-file:        LICENSE
author:              Simon Meier, Silk
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed: False
  exposed-modules:     Prelude
  build-depends:       base ==4.8.*, transformers >=0.4 && <0.5, time >=1.5 && <1.6, time-locale-compat, safe >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
